welcome.lessons.welcome.array.island.Island.scala.error
island:4: error: value t0 is not a member of Int
  for (i <- 0 t0 num.length -2){
              ^